[package]
name = "juneau"
version = "0.1.0"
edition = "2024"

[dependencies]
csv="1.3.1"
time="0.3.37"
augurs = { version = "0.9.0", features = ["prophet", "prophet-wasmstan"] }
mimalloc = "0.1.25"
clap = { version = "4.5.31", features = ["derive"] }

[profile.release]
codegen-units = 1 # https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
lto = "fat" # https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization

[build]
rustflags = ["-C", "target-cpu=native"] # https://doc.rust-lang.org/rustc/codegen-options/index.html#target-cpu
